<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="60dp"
    tools:context=".ui.dashboard.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logobrain"
                android:layout_marginTop="15dp"
                android:scaleType="fitCenter"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reminder_name"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/when"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0"
                >

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Sunday"
                        />

                    <CheckBox
                        android:id="@+id/sunday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Monday"
                        />

                    <CheckBox
                        android:id="@+id/monday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Tuesday"
                        />

                    <CheckBox
                        android:id="@+id/tuesday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Wednesday"
                        />

                    <CheckBox
                        android:id="@+id/wednesday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Thursday"
                        />

                    <CheckBox
                        android:id="@+id/thursday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Friday"
                        />

                    <CheckBox
                        android:id="@+id/friday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:layout_width="50dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/Saturady"
                        />

                    <CheckBox
                        android:id="@+id/saturday"
                        android:layout_width="match_parent"
                        android:layout_marginLeft="30dp"
                        android:layout_height="wrap_content"
                        />

                </TableRow>


            </TableLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/dusty_rose"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"

                />


            <Button android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dusty_rose"
                android:text="@string/button_done"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                />


        </LinearLayout>



    </ScrollView>




</LinearLayout>